# APatchN

./: CLAUDE.md
apdc/: .gitignore  CLAUDE.md  CMakeLists.txt  build.sh
apdc/cpp/: apd.cpp  apd.hpp  assets.cpp  assets.hpp  cli.cpp  cli.hpp  defs.hpp  event.cpp  event.hpp  json.cpp  json.hpp  logging.cpp  logging.hpp  lua.cpp  lua.hpp  main.cpp  metamodule.cpp  metamodule.hpp  module.cpp  module.hpp  module_config.cpp  module_config.hpp  package.cpp  package.hpp  process.cpp  process.hpp  properties.cpp  properties.hpp  pty.cpp  pty.hpp  resetprop.cpp  resetprop.hpp  restorecon.cpp  restorecon.hpp  result.hpp  sepolicy.cpp  sepolicy.hpp  supercall.cpp  supercall.hpp  utils.cpp  (+4 more)
apdc/test/: test_config_format.py
