cmake_minimum_required(VERSION 3.28)
project(apd CXX C)

# APatch userspace daemon (apd), C/C++ port of the original Rust crate (../apd).
# arm64-v8a only — mirrors the Rust build (panic=abort, LTO, size-optimized).
# Built standalone via Ninja + the Android NDK toolchain; Gradle drives it
# through an Exec task that copies the result to app/libs/arm64-v8a/libapd.so.

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 23)

# apd is a standalone binary (not the JNI lib): exceptions/RTTI are ON so we can
# map Rust's anyhow Result/`?`/context onto C++ exceptions cleanly.
add_compile_options(
    -Wall -Wextra -Wno-unused-parameter
    -fvisibility=hidden -fvisibility-inlines-hidden
    -fno-stack-protector -fomit-frame-pointer)

if(CMAKE_BUILD_TYPE STREQUAL "Release" OR NOT CMAKE_BUILD_TYPE)
    # Mirror Rust release profile: opt-level=3, lto=fat, codegen-units=1, strip=true.
    add_compile_options(-O3 -flto=full -ffunction-sections -fdata-sections)
    add_link_options(-O3 -flto=full -Wl,--gc-sections -Wl,--build-id=none -s)
endif()

# Re-run CMake (and thus refresh APD_VERSION_*) when the git ref changes.
set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/../.git/HEAD
    ${CMAKE_CURRENT_SOURCE_DIR}/../.git/refs)

# ---- version (mirrors ../apd/build.rs: 10000 + 200 + git-commit-count) ----
find_package(Git QUIET)
set(APD_VERSION_CODE "10200")
set(APD_VERSION_NAME "0.0.0")
if(GIT_FOUND)
    execute_process(
        COMMAND ${GIT_EXECUTABLE} rev-list --count HEAD
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..
        OUTPUT_VARIABLE _git_count OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET)
    if(_git_count)
        math(EXPR APD_VERSION_CODE "10000 + 200 + ${_git_count}")
    endif()
    execute_process(
        COMMAND ${GIT_EXECUTABLE} describe --tags --always
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..
        OUTPUT_VARIABLE _git_name OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET)
    if(_git_name)
        string(REGEX REPLACE "^v" "" APD_VERSION_NAME "${_git_name}")
    endif()
endif()
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cpp/version.hpp.in
               ${CMAKE_CURRENT_BINARY_DIR}/generated/version.hpp @ONLY)

# ---- embed installer.sh + banner (mirrors module.rs include_str!) ----
set(_gen ${CMAKE_CURRENT_BINARY_DIR}/generated)
file(READ ${CMAKE_CURRENT_SOURCE_DIR}/scripts/installer.sh _APD_INSTALLER_SH)
file(READ ${CMAKE_CURRENT_SOURCE_DIR}/scripts/banner _APD_BANNER)
file(WRITE ${_gen}/embedded_scripts.hpp
"#pragma once
// Generated by CMake from apdc/scripts/. Do not edit.
inline constexpr const char *INSTALLER_SH = R\"APDSCRIPT(${_APD_INSTALLER_SH})APDSCRIPT\";
inline constexpr const char *BANNER = R\"APDSCRIPT(${_APD_BANNER})APDSCRIPT\";
")
set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/scripts/installer.sh
    ${CMAKE_CURRENT_SOURCE_DIR}/scripts/banner)

# ---- vendored miniz (zip extraction) ----
add_library(miniz STATIC third_party/miniz/miniz.c)
target_include_directories(miniz PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/miniz)
target_compile_options(miniz PRIVATE -w)

# ---- vendored Lua 5.4 (module scripting), minus the interpreter/compiler mains ----
# Compiled as C++ so Lua errors use C++ exceptions (not longjmp), which lets our
# lua_CFunctions throw/catch across Lua frames safely (the mlua approach).
file(GLOB LUA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/third_party/lua/*.c)
list(FILTER LUA_SOURCES EXCLUDE REGEX "/(lua|luac)\\.c$")
set_source_files_properties(${LUA_SOURCES} PROPERTIES LANGUAGE CXX)
add_library(lua STATIC ${LUA_SOURCES})
target_include_directories(lua PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/lua)
target_compile_definitions(lua PRIVATE LUA_USE_POSIX LUA_USE_DLOPEN)
target_compile_options(lua PRIVATE -w -x c++)

# ---- vendored libsepol (SELinux policy engine for magiskpolicy) ----
# Monolithic-policy path only: exclude module_to_cil.c (the lone CIL dependency).
file(GLOB SEPOL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/libsepol/src/*.c)
list(FILTER SEPOL_SRC EXCLUDE REGEX "module_to_cil\\.c$")
add_library(sepol STATIC ${SEPOL_SRC})
target_include_directories(sepol PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/libsepol/include
                           PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/libsepol/src)
target_compile_options(sepol PRIVATE -w)

# ---- vendored magiskpolicy glue (Magisk v23, adapted) on top of libsepol ----
file(GLOB MAGISKPOLICY_SRC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/magiskpolicy/*.cpp)
list(FILTER MAGISKPOLICY_SRC EXCLUDE REGEX "magiskpolicy\\.cpp$") # exclude the CLI main
add_library(magiskpolicy STATIC ${MAGISKPOLICY_SRC})
target_include_directories(magiskpolicy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/magiskpolicy)
target_include_directories(magiskpolicy PRIVATE
                           ${CMAKE_CURRENT_SOURCE_DIR}/third_party/magisk_compat)
target_link_libraries(magiskpolicy PUBLIC sepol log)
target_compile_options(magiskpolicy PRIVATE -w)

# ---- vendored bionic libsystemproperties (writable prop-area for resetprop) ----
file(GLOB SYSPROP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/systemproperties/*.cpp)
add_library(systemproperties STATIC ${SYSPROP_SRC})
target_include_directories(systemproperties PUBLIC
                           ${CMAKE_CURRENT_SOURCE_DIR}/third_party/systemproperties/include)
target_compile_options(systemproperties PRIVATE -w)

# ---- nanopb (protobuf runtime for persistent_properties) ----
add_library(nanopb STATIC
            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nanopb/pb_common.c
            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nanopb/pb_decode.c
            ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nanopb/pb_encode.c)
target_include_directories(nanopb PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nanopb)
target_compile_options(nanopb PRIVATE -w)

# ---- vendored Magisk resetprop (v23) on libsystemproperties + nanopb ----
file(GLOB RESETPROP_SRC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/resetprop/*.cpp)
add_library(magiskresetprop STATIC ${RESETPROP_SRC})
target_include_directories(magiskresetprop PRIVATE
                           ${CMAKE_CURRENT_SOURCE_DIR}/third_party/resetprop
                           ${CMAKE_CURRENT_SOURCE_DIR}/third_party/magisk_compat)
target_link_libraries(magiskresetprop PUBLIC systemproperties nanopb log)
target_compile_options(magiskresetprop PRIVATE -w)

file(GLOB APD_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/cpp/*.cpp)

add_executable(apd ${APD_SOURCES})
target_include_directories(apd PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/cpp
    ${CMAKE_CURRENT_BINARY_DIR}/generated)
target_link_libraries(apd PRIVATE log miniz lua dl magiskpolicy magiskresetprop)
